fixed issue with edit side scroll on mobile

--- a/src/styles/EditQuiz.css
+++ b/src/styles/EditQuiz.css
@@ -3,7 +3,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -16,7 +16,6 @@ body {
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  padding: 2rem;
   overflow-y: auto;
   box-sizing: border-box;
 }
